--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Security audit
+      run: npm audit --audit-level=high
+
     - name: Run linting
       run: npx eslint . --ext .js,.jsx,.ts,.tsx
 
