--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "D4 Accountants",
   "short_name": "D4",
-  "description": "Professional accounting services and consultation",
+  "description": "Professional accounting services and consultation in Manchester, UK",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
