--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^4.1.0",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "@langchain/core": "^0.3.40",
     "@motionone/dom": "^10.18.0",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -24,13 +25,11 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
-    "@xenova/transformers": "^2.17.3",
+    "@xenova/transformers": "^2.17.2",
     "ai": "^4.1.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dompurify": "^3.2.4",
     "framer-motion": "^12.4.5",
-    "jsdom": "^26.0.0",
     "langchain": "^0.3.19",
     "lucide-react": "^0.475.0",
     "mongodb": "^5.9.2",
@@ -49,7 +48,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
-    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -61,10 +59,12 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-loader": "^2.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "type": "module"
+  "type": "module",
+  "overrides": {
+    "sourcemap-codec": "@jridgewell/sourcemap-codec"
+  }
 }
