--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "cleanup": "node scripts/cleanup.mjs",
+    "find-duplicates": "npx jscpd ./src --config jscpd.json",
+    "unused-exports": "ts-prune",
+    "dead-code": "ts-deadcode --project tsconfig.json"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
@@ -29,7 +33,9 @@
     "ai": "^4.1.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.0.9",
     "framer-motion": "^12.4.5",
+    "isomorphic-dompurify": "^2.4.0",
     "langchain": "^0.3.19",
     "lucide-react": "^0.475.0",
     "mongodb": "^5.9.2",
@@ -47,6 +53,7 @@
     "@playwright/test": "^1.50.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.1",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.10",
@@ -61,10 +68,18 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "jscpd": "^3.5.9",
+    "ts-prune": "^0.10.3",
+    "ts-deadcode": "^1.3.2"
   },
   "type": "module",
+  "resolutions": {
+    "sourcemap-codec": "@jridgewell/sourcemap-codec",
+    "magic-string": "^0.30.0"
+  },
   "overrides": {
-    "sourcemap-codec": "@jridgewell/sourcemap-codec"
+    "sourcemap-codec": "@jridgewell/sourcemap-codec",
+    "magic-string": "^0.30.0"
   }
 }
