--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cleanup": "node scripts/cleanup.mjs",
     "find-duplicates": "npx jscpd ./src --config jscpd.json",
     "unused-exports": "ts-prune",
-    "dead-code": "ts-deadcode --project tsconfig.json"
+    "dead-code": "node scripts/run-ts-unused-exports.mjs"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
@@ -41,6 +41,7 @@
     "mongodb": "^5.9.2",
     "mongoose": "^8.10.1",
     "next": "^15.1.7",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
@@ -51,6 +52,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.1",
     "@types/dompurify": "^3.0.5",
@@ -62,16 +65,17 @@
     "babel-jest": "^29.7.0",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jscpd": "^3.5.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "jscpd": "^3.5.9",
     "ts-prune": "^0.10.3",
-    "ts-deadcode": "^1.3.2"
+    "ts-unused-exports": "^0.10.0",
+    "typescript": "^5"
   },
   "type": "module",
   "resolutions": {
