--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cleanup": "node scripts/cleanup.mjs",
     "find-duplicates": "npx jscpd ./src --config jscpd.json",
     "unused-exports": "ts-prune",
-    "dead-code": "node scripts/run-ts-unused-exports.mjs"
+    "dead-code": "node scripts/run-ts-unused-exports.mjs",
+    "validate-pwa": "npx pwa-asset-generator ./public/icon-512x512.png ./public --manifest ./public/manifest.json --index ./public/index.html --xhtml"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
@@ -63,7 +64,7 @@
     "@types/react-dom": "^19.0.4",
     "@types/testing-library__jest-dom": "^5.14.9",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.20.1",
+    "eslint": "^9.21.0",
     "eslint-config-next": "^15.1.7",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -74,7 +75,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-prune": "^0.10.3",
-    "ts-unused-exports": "^0.10.0",
+    "ts-unused-exports": "^11.0.1",
     "typescript": "^5"
   },
   "type": "module",
