--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # testing
 /coverage
+.jscpd-report/
 
 # next.js
 /.next/
@@ -32,6 +33,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local*
 
 # vercel
 .vercel
@@ -39,6 +41,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# history
+/history/
+.history/
+
+# IDE/Editor history
+.history/
 
 # Playwright
 node_modules/
