--- a/package.json
+++ b/package.json
@@ -17,27 +17,32 @@
     "find-duplicates": "npx jscpd ./src --config jscpd.json",
     "unused-exports": "ts-prune",
     "dead-code": "node scripts/run-ts-unused-exports.mjs",
-    "validate-pwa": "npx pwa-asset-generator ./public/icon-512x512.png ./public --manifest ./public/manifest.json --index ./public/index.html --xhtml"
+    "validate-pwa": "npx pwa-asset-generator ./public/icon-512x512.png ./public --manifest ./public/manifest.json --index ./public/index.html --xhtml",
+    "download-model": "node scripts/download-model.mjs",
+    "setup-ollama": "brew install ollama && ollama pull zephyr"
   },
   "dependencies": {
-    "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^4.1.0",
     "@jridgewell/sourcemap-codec": "^1.4.15",
-    "@langchain/core": "^0.3.40",
-    "@motionone/dom": "^10.18.0",
+    "@langchain/community": "^0.3.34",
+    "@langchain/core": "^0.3.42",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@serwist/core": "^9.0.12",
+    "@serwist/next": "^9.0.12",
+    "@serwist/precaching": "^9.0.12",
     "@xenova/transformers": "^2.17.2",
     "ai": "^4.1.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.0.9",
     "framer-motion": "^12.4.5",
-    "isomorphic-dompurify": "^2.4.0",
+    "isomorphic-dompurify": "^2.22.0",
     "langchain": "^0.3.19",
+    "limiter": "^3.0.0",
     "lucide-react": "^0.475.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.10.1",
@@ -47,8 +52,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-phone-number-input": "^3.4.12",
+    "serwist": "^9.0.12",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "web-push": "3.6.7",
+    "workbox-expiration": "^7.3.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -63,11 +71,15 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/web-push": "3.6.4",
+    "assert": "^2.1.0",
     "babel-jest": "^29.7.0",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^9.21.0",
     "eslint-config-next": "^15.1.7",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "events": "^3.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
